Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     
  <header>
-    <a href="index.html"><img src="/Users/manha08/Desktop/Site Kisbert/img/Logokisbert.jpeg" width="70" height="70">  
+    <a href="index.html"><img src="./img/Logokisbert.jpeg" width="70" height="70">  
     <p>
     </p>
     <a href="homens.html"><button>Homens</button> </a>
