Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <p></p>
 
-<img src="/Users/manha08/Desktop/Site Kisbert/img/img roupas/bannerdesconto.jpg" widht="350" height="350">
+<img src="./img/img roupas/bannerdesconto.jpg" widht="350" height="350">
 
 
 <footer>  
