Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <a href="unidades.html"><button>Unidades</button> </a>
     
     <p></p>
-    <a href="https://www.instagram.com/kisbert.storee?igsh=ZGJmOGkya2s5ejdv"><img src="/Users/manha08/Desktop/Site Kisbert/img/instagram.png" width="35" height="35">
-    <a href="https://x.com/KisbertStore?t=wJk3ho0998JRlxo3Tbc-wQ&s=09"><img src="/Users/manha08/Desktop/Site Kisbert/img/X.png" width="35" height="35">
+    <a href="https://www.instagram.com/kisbert.storee?igsh=ZGJmOGkya2s5ejdv"><img src="./img/instagram.png" width="35" height="35">
+    <a href="https://x.com/KisbertStore?t=wJk3ho0998JRlxo3Tbc-wQ&s=09"><img src="./img/X.png" width="35" height="35">
 </footer>
 
 </body>
