--- a/Infantil.html
+++ b/Infantil.html
@@ -8,7 +8,7 @@
 <body>
     
  <header>
-    <a href="index.html"><img src="/Users/manha08/Desktop/Site Kisbert/img/Logokisbert.jpeg" width="70" height="70">  
+    <a href="index.html"><img src="./img/Logokisbert.jpeg" width="70" height="70">  
     </header>
 
 
@@ -19,8 +19,8 @@
 
 <footer>  
   
-    <a href="https://www.instagram.com/kisbert.storee?igsh=ZGJmOGkya2s5ejdv"><img src="/Users/manha08/Desktop/Site Kisbert/img/instagram.png" width="35" height="35">
-        <a href="https://x.com/KisbertStore?t=wJk3ho0998JRlxo3Tbc-wQ&s=09"><img src="/Users/manha08/Desktop/Site Kisbert/img/X.png" width="35" height="35">
+    <a href="https://www.instagram.com/kisbert.storee?igsh=ZGJmOGkya2s5ejdv"><img src="./img/instagram.png" width="35" height="35">
+        <a href="https://x.com/KisbertStore?t=wJk3ho0998JRlxo3Tbc-wQ&s=09"><img src="./img/X.png" width="35" height="35">
 </footer>
 
 </body>
