--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kisbert Store</title>
+    <a href="./css/Estilo.css"
 </head>
 <body>
     
