--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kisbert Store</title>
-    <a href="./css/Estilo.css" ></a>
+    <link rel="stylesheet" href="./css/Estilo.css" >
 </head>
+<center>
 <body>
-    
+    <div class="retangulo"></div>
  <header>
     <a href="index.html"><img src="./img/Logokisbert.jpeg" width="70" height="70">  
     <p>
@@ -16,7 +17,9 @@
     <a href="mulheres.html"><button>Mulheres</button> </a>
     <a href="Infantil.html"><button>Infantil</button> </a>
     <a href="marcas.html"><button>Marcas</button> </a>
-    </header>
+    
+
+</header>
 
 <p></p>
 
@@ -32,6 +35,6 @@
     <a href="https://www.instagram.com/kisbert.storee?igsh=ZGJmOGkya2s5ejdv"><img src="./img/instagram.png" width="35" height="35">
     <a href="https://x.com/KisbertStore?t=wJk3ho0998JRlxo3Tbc-wQ&s=09"><img src="./img/X.png" width="35" height="35">
 </footer>
-
+</center>
 </body>
 </html>
