--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="retangulo"></div>
  <header>
+    <div class="retangulo"></div>
     <a href="index.html"><img src="./img/Logokisbert.jpeg" width="70" height="70">  
     <p>
     </p>
