--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a href="index.html"><img src="./img/Logokisbert.jpeg" width="70" height="70">  
     <p>
     </p>
-    <a href="homens.html"><button>Homens</button> </a>
+    <a href="homens.html"><button class="botao-amarelo">Homens</button> </a>
     <a href="mulheres.html"><button>Mulheres</button> </a>
     <a href="Infantil.html"><button>Infantil</button> </a>
     <a href="marcas.html"><button>Marcas</button> </a>
