--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <a href="mulheres.html"><button>Mulheres</button> </a>
     <a href="Infantil.html"><button>Infantil</button> </a>
     <a href="marcas.html"><button>Marcas</button> </a>
-    
+    <button class="botao-amarelo">Meu Botão</button>
+
 
 </header>
 
