--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <center>
 <body>
     <div class="retangulo"></div>
+    <div class="container"></div>
  <header>
     <a href="index.html"><img src="./img/Logokisbert.jpeg" width="70" height="70">  
     <p>
