--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kisbert Store</title>
     <link rel="stylesheet" href="./css/Estilo.css" >
+    <style>
+        .container {
+            background-image: url('caminho/para/sua/imagem.jpg');
+            background-size: cover; 
+            background-position: center; 
+            background-repeat: no-repeat; 
+           
+        }
+    </style>
+
+
+
 </head>
 <center>
 <body>
