--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <footer>  
     <a href="sobrenós.html"><button>Sobre Nós</button> </a>
-    <a href="faleconosco.html"><button>Fale Conosco</button> </a>
+    <a href="https://api.whatsapp.com/send/?phone=511946751592&text&type=phone_number&app_absent=0"><button>Fale Conosco</button> </a>
     <a href="unidades.html"><button>Unidades</button> </a>
     
     <p></p>
