--- a/index.html
+++ b/index.html
@@ -34,8 +34,17 @@
 <p></p>
 
 <img src="./img/img roupas/bannerdesconto.jpg" widht="700" height="700">
-
-
+<p></p>
+<p></p>
+<img src="./img/adidasLogo.png" widht="100" height="100">
+<img src="./img/pumaLogo.png" widht="100" height="100">
+<img src="./img/reservalogo.png" widht="100" height="100">
+<img src="./img/nikelogo.png" widht="100" height="100">
+<img src="./img/louislogo.png" widht="100" height="100">
+<img src="./img/calvinlogo.png" widht="100" height="100">
+<img src="./img/lacostelogo.jpg" widht="100" height="100">
+<img src="./img/filalogo.png" widht="100" height="100">
+<p></p>
 <footer>  
     <a href="sobrenós.html"><button>Sobre Nós</button> </a>
     <a href="https://api.whatsapp.com/send/?phone=511946751592&text&type=phone_number&app_absent=0"><button>Fale Conosco</button> </a>
