--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="retangulo"></div>
     <div class="container"></div>
  <header>
-    <a href="index.html"><img src="./img/Logokisbert.jpeg" width="70" height="70">  
+    <a href="index.html"><img src="./img/Logokisbert.jpeg" width="70" height="70" >  
     <p>
     </p>
     <a href="homens.html"><button>Homens</button> </a>
@@ -33,18 +33,25 @@
 
 <p></p>
 
-<img src="./img/img roupas/bannerdesconto.jpg" widht="700" height="700">
+<img src="./img/img roupas/bannerdesconto.jpg" class="figure" widht="700" height="700">
 <p></p>
 <p></p>
-<img src="./img/adidasLogo.png" widht="100" height="100">
-<img src="./img/pumaLogo.png" widht="100" height="100">
-<img src="./img/reservalogo.png" widht="100" height="100">
-<img src="./img/nikelogo.png" widht="100" height="100">
-<img src="./img/louislogo.png" widht="100" height="100">
-<img src="./img/calvinlogo.png" widht="100" height="100">
-<img src="./img/lacostelogo.jpg" widht="100" height="100">
-<img src="./img/filalogo.png" widht="100" height="100">
-<p></p>
+<img src="./img/adidasLogo.png" class="figure" widht="75" height="75">
+<br></br> 
+<img src="./img/pumaLogo.png" class="figure" widht="75" height="75">
+<br></br>
+<img src="./img/reservalogo.png" class="figure" widht="75" height="75">
+<br>
+<img src="./img/nikelogo.png" class="figure" widht="75" height="75">
+<br>
+<img src="./img/louislogo.png" class="figure" widht="75" height="75">
+<br>
+<img src="./img/calvinlogo.png" class="figure" widht="75" height="75">
+<br>
+<img src="./img/lacostelogo.jpg" class="figure" widht="75" height="75">
+<br>
+<img src="./img/filalogo.png" class="figure" widht="75" height="75">
+<br>
 <footer>  
     <a href="sobrenós.html"><button>Sobre Nós</button> </a>
     <a href="https://api.whatsapp.com/send/?phone=511946751592&text&type=phone_number&app_absent=0"><button>Fale Conosco</button> </a>
