--- a/index.html
+++ b/index.html
@@ -22,36 +22,27 @@
     <div class="retangulo"></div>
     <div class="container"></div>
  <header>
-    <a href="index.html"><img src="./img/Logokisbert.jpeg" width="70" height="70" >  
+   <a href="index.html"><img src="./img/Logokisbert.jpeg" width="200" height="200" > 
     <p>
     </p>
-    <a href="homens.html"><button>Homens</button> </a>
-    <a href="mulheres.html"><button>Mulheres</button> </a>
-    <a href="Infantil.html"><button>Infantil</button> </a>
-    <a href="marcas.html"><button>Marcas</button> </a>
+    <a href="homens.html" class="figure1"><button>Homens</button> </a>
+    <a href="mulheres.html"class="figure1"><button>Mulheres</button> </a>
+    <a href="Infantil.html"class="figure1"><button>Infantil</button> </a>
+    <a href="marcas.html"class="figure1"><button>Marcas</button> </a>
 </header>
 
 <p></p>
-
 <img src="./img/img roupas/bannerdesconto.jpg" class="figure" widht="700" height="700">
 <p></p>
-<p></p>
-<img src="./img/adidasLogo.png" class="figure" widht="75" height="75">
-<br></br> 
+<img src="./img/adidasLogo.png" class="figure" widht="75" height="75"> 
 <img src="./img/pumaLogo.png" class="figure" widht="75" height="75">
-<br></br>
 <img src="./img/reservalogo.png" class="figure" widht="75" height="75">
-<br>
 <img src="./img/nikelogo.png" class="figure" widht="75" height="75">
-<br>
 <img src="./img/louislogo.png" class="figure" widht="75" height="75">
-<br>
 <img src="./img/calvinlogo.png" class="figure" widht="75" height="75">
-<br>
 <img src="./img/lacostelogo.jpg" class="figure" widht="75" height="75">
-<br>
 <img src="./img/filalogo.png" class="figure" widht="75" height="75">
-<br>
+
 <footer>  
     <a href="sobrenós.html"><button>Sobre Nós</button> </a>
     <a href="https://api.whatsapp.com/send/?phone=511946751592&text&type=phone_number&app_absent=0"><button>Fale Conosco</button> </a>
