--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/Estilo.css" >
     <style>
         .container {
-            background-image: url('/img/Kisbertfundo.png');
+            background-image: url('./img/Kisbertfundo.png');
             background-size: cover; 
             background-position: center; 
             background-repeat: no-repeat; 
