--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
    <a href="index.html"><img src="./img/Logokisbert.jpeg" width="200" height="200" > 
     <p>
     </p>
-    <a href="homens.html" class="figure1"><button>Homens</button> </a>
-    <a href="mulheres.html"class="figure1"><button>Mulheres</button> </a>
-    <a href="Infantil.html"class="figure1"><button>Infantil</button> </a>
-    <a href="marcas.html"class="figure1"><button>Marcas</button> </a>
+    <li><a href="homens.html" class="figure1"><button>Homens</button> </a></li>
+    <li><a href="mulheres.html"class="figure1"><button>Mulheres</button></a></li>
+    <li><a href="Infantil.html"class="figure1"><button>Infantil</button> </a></li>
+    <li><a href="marcas.html"class="figure1"><button>Marcas</button> </a></li>
 </header>
 
 <p></p>
@@ -40,7 +40,7 @@
 <img src="./img/nikelogo.png" class="figure" widht="75" height="75">
 <img src="./img/louislogo.png" class="figure" widht="75" height="75">
 <img src="./img/calvinlogo.png" class="figure" widht="75" height="75">
-<img src="./img/lacostelogo.jpg" class="figure" widht="75" height="75">
+<img src="./img/lacostelogo.png" class="figure" widht="75" height="75">
 <img src="./img/filalogo.png" class="figure" widht="75" height="75">
 
 <footer>  
