--- a/index.html
+++ b/index.html
@@ -5,36 +5,29 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kisbert Store</title>
     <link rel="stylesheet" href="./css/Estilo.css" >
-    <style>
-        .container {
-            background-image: ('/img/Kisbertfundo.png');
-            background-size: cover; 
-            background-position: center; 
-            background-repeat: no-repeat; 
-        }
-    </style>
+    
 
 
 
 </head>
 <center>
 <body>
-    <div class="retangulo"></div>
-    <div class="container"></div>
- <header>
-   <a href="index.html"><img src="./img/Logokisbert.jpeg" width="200" height="200" > 
-    <p>
-    </p>
+ <main></main>
+ 
+    <header>
+<ul class="nav">
+    <a class="logo" href="index.html"><img src="/img/Logokisbert.jpeg" height="115px" width="115px"></a>
     <li><a href="homens.html" class="figure1"><button>Homens</button> </a></li>
     <li><a href="mulheres.html"class="figure1"><button>Mulheres</button></a></li>
     <li><a href="Infantil.html"class="figure1"><button>Infantil</button> </a></li>
     <li><a href="marcas.html"class="figure1"><button>Marcas</button> </a></li>
+</ul>
 </header>
 
 <p></p>
 <img src="./img/img roupas/bannerdesconto.jpg" class="figure" widht="700" height="700">
-<p></p>
-<img src="./img/adidasLogo.png" class="figure" widht="75" height="75"> 
+<ul class="nav1">
+<a href="teste.html"><img src="./img/adidasLogo.png" class="figure" widht="75" height="75"></a>
 <img src="./img/pumaLogo.png" class="figure" widht="75" height="75">
 <img src="./img/reservalogo.png" class="figure" widht="75" height="75">
 <img src="./img/nikelogo.png" class="figure" widht="75" height="75">
@@ -42,7 +35,7 @@
 <img src="./img/calvinlogo.png" class="figure" widht="75" height="75">
 <img src="./img/lacostelogo.png" class="figure" widht="75" height="75">
 <img src="./img/filalogo.png" class="figure" widht="75" height="75">
-
+</ul>
 <footer>  
     <a href="sobrenós.html"><button>Sobre Nós</button> </a>
     <a href="https://api.whatsapp.com/send/?phone=511946751592&text&type=phone_number&app_absent=0"><button>Fale Conosco</button> </a>
