--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <title>Kisbert Store</title>
     <link rel="stylesheet" href="./css/Estilo.css" >
     
-
-
-
 </head>
 <center>
 <body>
@@ -16,10 +13,10 @@
  
     <header>
 <ul class="nav">
-    <a class="logo" href="index.html"><img src="/img/Logokisbert.jpeg" height="115px" width="115px"></a>
+    <a class="logo" href="index.html"><img src="/img/Logokisbert.jpeg" height="170px" width="170spx"></a>
     <li><a href="homens.html" class="figure1"><button>Homens</button> </a></li>
-    <li><a href="mulheres.html"class="figure1"><button>Mulheres</button></a></li>
-    <li><a href="Infantil.html"class="figure1"><button>Infantil</button> </a></li>
+        <li><a href="mulheres.html"class="figure1"><button>Mulheres</button></a></li>
+        <li><a href="Infantil.html"class="figure1"><button>Infantil</button> </a></li>
     <li><a href="marcas.html"class="figure1"><button>Marcas</button> </a></li>
 </ul>
 </header>
@@ -38,12 +35,13 @@
 </ul>
 <footer>  
     <a href="sobrenós.html"><button>Sobre Nós</button> </a>
-    <a href="https://api.whatsapp.com/send/?phone=511946751592&text&type=phone_number&app_absent=0"><button>Fale Conosco</button> </a>
+    <a href="https://api.whatsapp.com/send/?phone=511946751592&text&type=phone_number&app_absent=0"><button style="background-color: white;">Fale Conosco</button> </a>
     <a href="unidades.html"><button>Unidades</button> </a>
-    
+    <ul class="nav2">
     <p></p>
-    <a href="https://www.instagram.com/kisbert.storee?igsh=ZGJmOGkya2s5ejdv"><img src="./img/instagram.png" width="35" height="35">
-    <a href="https://x.com/KisbertStore?t=wJk3ho0998JRlxo3Tbc-wQ&s=09"><img src="./img/X.png" width="35" height="35">
+    <a href="https://www.instagram.com/kisbert.storee?igsh=ZGJmOGkya2s5ejdv"><img style="background-color: white; border-radius: 17px;"src="./img/instagram.png" width="35" height="35">
+    <a href="https://x.com/KisbertStore?t=wJk3ho0998JRlxo3Tbc-wQ&s=09"><img style="background-color: white; border-radius: 17px;"src="./img/X.png" width="35" height="35">
+    </ul>
 </footer>
 </center>
 </body>
