--- a/sobrenós.html
+++ b/sobrenós.html
@@ -20,7 +20,7 @@
     As lojas repetiram o sucesso que a primeira filial obteve, e com a idéia de todos os sócios e a CEO, as vendas se expandiram na internet, sendo o meio de maior sucesso da empresa, que pôde se popularizar no país inteiro.<br>
     Atualmente a Kisbert Store, é uma marca popularmente conhecida no Brasil , que aos poucos também está se expandindo no exterior.<br>
     <a href=""><img src="./img/Naiara.jpeg"></a><br>
-        <a href="https://www.instagram.com/guilhermeb3lo?igsh=MW50NHp5cjFrMWg2Zg=="><img src="https://pbs.twimg.com/media/EdE75ElWkAE9lyK.jpg"></a>
+        <a href="https://www.instagram.com/guilhermeb3lo?igsh=MW50NHp5cjFrMWg2Zg=="><img src=""></a>
 
 
 
