--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <li><a href="marcas.html"class="figure1"><button>Marcas</button> </a></li>
 </ul>
 </header>
-<a href="/workspaces/web-kisbert/login.html"><button>Página de Login</button></a>
+<a href="login.html"><button>Página de Login</button></a>
 <p></p>
 <img src="./img/img roupas/bannerdesconto.jpg" class="figure" widht="700" height="700">
 <ul class="nav1">
