--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
     <a href="#">Forgot password?</a>
     </div>
 
-<button type="submit" class="btn">login</button>
+<a href="index.html"><button type="submit" class="btn">login</button></a>
 
 <div class="register-link">
     <p>Don't have an accont? <a href="#">Register</a></p>
