--- a/sobrenós.html
+++ b/sobrenós.html
@@ -23,7 +23,7 @@
         <a href="https://www.instagram.com/guilhermeb3lo?igsh=MW50NHp5cjFrMWg2Zg=="><img src=""></a>
 
 
-<a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Faminoapps.com%2Fc%2Fminions-brasil%2Fpage%2Fitem%2Fgru%2F1JaB_VRBhrIzkmGb4LnvREPelJN5YdQQXnB&psig=AOvVaw14LW5BXCYKXvfwBEwUVBAy&ust=1719313089941000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCNDigcOK9IYDFQAAAAAdAAAAABAE"></a>
+<img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Faminoapps.com%2Fc%2Fminions-brasil%2Fpage%2Fitem%2Fgru%2F1JaB_VRBhrIzkmGb4LnvREPelJN5YdQQXnB&psig=AOvVaw14LW5BXCYKXvfwBEwUVBAy&ust=1719313089941000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCNDigcOK9IYDFQAAAAAdAAAAABAE">
 
 
 
