--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <li><a href="mulheres.html"class="figure1"><button>Mulheres</button></a></li>
         <li><a href="Infantil.html"class="figure1"><button>Infantil</button> </a></li>
     <li><a href="marcas.html"class="figure1"><button>Marcas</button> </a></li>
+    <li><a href="login.html"><button>Página de Login</button></a></li>
 </ul>
 </header>
-<a href="login.html"><button>Página de Login</button></a>
 <p></p>
 <img src="./img/img roupas/bannerdesconto.jpg" class="figure" widht="700" height="700">
 <ul class="nav1">
@@ -28,8 +28,6 @@
 <img src="./img/pumaLogo.png" class="figure" widht="75" height="75">
 <img src="./img/reservalogo.png" class="figure" widht="75" height="75">
 <img src="./img/nikelogo.png" class="figure" widht="75" height="75">
-<img src="./img/louislogo.png" class="figure" widht="75" height="75">
-<img src="./img/calvinlogo.png" class="figure" widht="75" height="75">
 <img src="./img/lacostelogo.png" class="figure" widht="75" height="75">
 <img src="./img/filalogo.png" class="figure" widht="75" height="75">
 </ul>
