--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <li><a href="mulheres.html"class="figure1"><button>Mulheres</button></a></li>
         <li><a href="Infantil.html"class="figure1"><button>Infantil</button> </a></li>
     <li><a href="marcas.html"class="figure1"><button>Marcas</button> </a></li>
-    <li><a href="login.html"><button>Página de Login</button></a></li>
+    <li><img src="./img/carrinho-cortado.png" class="figure" widht="90" height="90"></li>
+    <li><img src="./img/usuario 1 foto.png" class="figure" widht="90" height="90"></li>
 </ul>
 </header>
 <p></p>
