--- a/sobrenós.html
+++ b/sobrenós.html
@@ -26,6 +26,65 @@
 
 <img src="https://pm1.aminoapps.com/6327/e5e590bc53d31298ae8e5d760a53e08aae24efcf_00.jpg" wwidht="70" height="70">
 
+	  
+    <div class="card">
+        <div class="img-box">
+            <img src="Guilherme2.png">
+        </div>
+        <div class="content">
+            <h2>Guilherme Belo</h2>
+            <p>
+                Programou o site
+                fez os principais designes do site
+            </p>
+            <a href="#" class="read-more">
+                DESIGNER / PROGRAMADOR
+            </a>
+        </div>
+    </div>
+    <div class="card">
+        <div class="img-box">
+            <img src="elvis2.png">
+        </div>
+        <div class="content">
+            <h2>Elvis Daniel</h2>
+            <p>
+                Tomou diversas decisões importantes que ajudaram na criação do site
+            </p>
+            <a href="#" class="read-more">
+                Diretor
+            </a>
+        </div>
+    </div>
+    <div class="card">
+        <div class="img-box">
+            <img src="naiara2.png">
+        </div>
+        <div class="content">
+            <h2>Naiara Tunes</h2>
+            <p>
+                Naiara Tumenas é a CEO da kisbert,e dela veio a idéia de criar uma loja. ela era apaixonada por moda desde a infância, e decidiu transformar sua paixão em negócio.
+            </p>
+            <a href="#" class="read-more">
+                CEO
+            </a>
+        </div>
+    </div>
+    <div class="card">
+        <div class="img-box">
+            <img src="fernando2.png">
+        </div>
+        <div class="content">
+            <h2>FERNANDO FERNANDES</h2>
+            <p>
+                Ajudou na programação e estrutura do site
+            </p>
+            <a href="#" class="read-more">
+                PROGRAMADOR
+            </a>
+        </div>
+    </div>
+
 
 
     <footer>  
