--- a/sobrenós.html
+++ b/sobrenós.html
@@ -33,7 +33,7 @@
     </div>
     <div class="card">
         <div class="img-box">
-            <img src="elvis2.png">
+            <img src="elvis2.webp">
         </div>
         <div class="content">
             <h2>Elvis Daniel</h2>
