--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <img src="./img/filalogo.png" class="figure" widht="75" height="75">
 </ul>
 <footer>  
-    <a href="sobrenós.html"><button>Sobre Nós</button> </a>
+    <a href="sobrenos2.html"><button>Sobre Nós</button> </a>
     <a href="https://api.whatsapp.com/send/?phone=511946751592&text&type=phone_number&app_absent=0"><button style="background-color: white;">Fale Conosco</button> </a>
     <a href="unidades.html"><button>Unidades</button> </a>
     <ul class="nav2">
