--- a/sobrenos2.html
+++ b/sobrenos2.html
@@ -10,7 +10,7 @@
   
     <div class="card">
         <div class="img-box">
-            <img src="Guilherme2.png">
+            <img src="./img/Guilherme2.png">
         </div>
         <div class="content">
             <h2>Guilherme Belo</h2>
@@ -25,7 +25,7 @@
     </div>
     <div class="card">
         <div class="img-box">
-            <img src="elvis2.png">
+            <img src="./img/elvis2.png">
         </div>
         <div class="content">
             <h2>Elvis Daniel</h2>
@@ -39,7 +39,7 @@
     </div>
     <div class="card">
         <div class="img-box">
-            <img src="naiara2.png">
+            <img src="./img/naiara2.png">
         </div>
         <div class="content">
             <h2>Naiara Tunes</h2>
@@ -53,7 +53,7 @@
     </div>
     <div class="card">
         <div class="img-box">
-            <img src="fernando2.png">
+            <img src="./img/fernando2.png">
         </div>
         <div class="content">
             <h2>FERNANDO FERNANDES</h2>
