--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         }
 
         .carousel img {
-            width: 100%;
-            height: auto;
+            width: 900px;
+            height: 700px;
         }
 
         .carousel-controls {
@@ -64,10 +64,10 @@
     <div class="carousel">
         <div class="carousel-container">
             <div class="carousel-item">
-                <img src="https://th.bing.com/th?id=OIP.mUkaS32aGUjLM0aMajBEVAHaJT&w=223&h=280&c=8&rs=1&qlt=90&o=6&dpr=1.3&pid=3.1&rm=2" alt="Imagem 1">
+                <img src="./img/img roupas/bannerdesconto.jpg" alt="Imagem 1">
             </div>
             <div class="carousel-item">
-                <img src="https://th.bing.com/th?id=OIP.mUkaS32aGUjLM0aMajBEVAHaJT&w=223&h=280&c=8&rs=1&qlt=90&o=6&dpr=1.3&pid=3.1&rm=2" alt="Imagem 2">
+                <img src="./img/img roupas/stores.png" alt="Imagem 2">
             </div>
             <div class="carousel-item">
                 <img src="https://th.bing.com/th?id=OIP.ehAT0F6A-bR-9ZPmcghCtQHaEo&w=316&h=197&c=8&rs=1&qlt=90&o=6&dpr=1.3&pid=3.1&rm=2" alt="Imagem 3">
@@ -75,7 +75,6 @@
         </div>
     </div>
 
-    <img src="./img/img roupas/bannerdesconto.jpg" class="figure" width="700" height="700">
 
     <ul class="nav1">
         <a href="teste.html"><img src="./img/adidasLogo.png" class="figure" width="75" height="75"></a>
