--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <center>
     <header>
         <ul class="nav">
-            <a class="logo" href="index.html"><img src="/img/Logokisbert.jpeg" height="170px" width="170px"></a>
+            <a class="logo" href="index.html"><img src="./img/Logokisbert.jpeg" height="170px" width="170px"></a>
             <li><a href="homens.html" class="figure1"><button>Homens</button></a></li>
             <li><a href="mulheres.html" class="figure1"><button>Mulheres</button></a></li>
             <li><a href="Infantil.html" class="figure1"><button>Infantil</button></a></li>
