--- a/index.html
+++ b/index.html
@@ -51,6 +51,17 @@
 <body>
     <center>
     <header>
+        <div class="container">
+            <h2>Exemplo de Display com Buscador</h2>
+            <input type="text" id="searchInput" placeholder="Digite sua busca...">
+            <ul class="results" id="searchResults">
+                <li>Homens</li>
+                <li>Resultado 2</li>
+                <li>Resultado 3</li>
+                <li>Resultado 4</li>
+                <li>Resultado 5</li>
+            </ul>
+        </div>
         <ul class="nav">
             <a class="logo" href="index.html"><img src="./img/Logokisbert.jpeg" height="110px" width="110px"></a>
             <li><a href="homens.html" class="figure1"><button>Homens</button></a></li>
