--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 
     <ul class="nav1">
-        <a href="teste.html"><img src="./img/adidasLogo.png" class="figure" width="75" height="75"></a>
+        <a href="pagadidas.html"><img src="./img/adidasLogo.png" class="figure" width="75" height="75"></a>
         <a href="pagpuma.html"><img src="./img/pumaLogo.png" class="figure" width="75" height="75"></a>
         <a href="pagreserva.html"><img src="./img/reservalogo.png" class="figure" width="75" height="75"></a>
         <a href="pagnike.html"><img src="./img/nikelogo.png" class="figure" width="75" height="75"></a>
