--- a/pagreserva.html
+++ b/pagreserva.html
@@ -129,7 +129,7 @@
         </div>
     </div>
     
-    <center><img src="./img/adidasLogo.png" width="160px" height="150px"></center>
+    <center><img src="./img/reservalogo.png" width="160px" height="150px"></center>
 
     <div class="category">
         <h2>Camisetas</h2>
