--- a/pagpuma.html
+++ b/pagpuma.html
@@ -124,7 +124,7 @@
         <div class="search-bar">
             <input type="text" id="searchInput" placeholder="Buscar produtos...">
             <button onclick="searchItems()">
-                <img src="lupa.png" alt="Lupa" style="width: 20px; height: 20px;">
+                <img src="" alt="Lupa" style="width: 20px; height: 20px;">
             </button>
         </div>
     </div>
