--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <li><a href="mulheres.html" class="figure1"><button>Mulheres</button></a></li>
             <li><a href="Infantil.html" class="figure1"><button>Infantil</button></a></li>
             <li><img src="./img/carrinho-cortado.png" class="figure" width="90" height="90"></li>
-            <li><img src="./img/usuario 1 foto.png" class="figure" width="80" height="80"></li>
+            <li><a href="login.html"><img src="./img/usuario 1 foto.png" class="figure" width="80" height="80"></a></li>
         </ul>
     </header>
 
