--- a/faleconosco.html
+++ b/faleconosco.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kisbert Store</title>
+    <link rel="icon" href="./img/Logokisbert.jpeg" type="image/x-icon">
 </head>
 <body>
     
