--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kisbert Store</title>
     <link rel="stylesheet" href="./css/Estilo.css">
+    <link rel="icon" href="./img/Logokisbert.jpeg" type="image/x-icon">
 
     <style>
         /* Estilos opcionais para o carrossel */
