--- a/login.html
+++ b/login.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tela de login</title>
+    <title>Cadastro</title>
     <link rel="stylesheet" href="./css/style.css" >
 <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+<link rel="icon" href="./img/Logokisbert.jpeg" type="image/x-icon">
 
 </head>
 
