--- a/marcaadidas.html
+++ b/marcaadidas.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Loja de Roupas</title>
+<title>Adidas</title>
+<link rel="icon" href="./img/Logokisbert.jpeg" type="image/x-icon">
 <style>
     body {
         font-family: Arial, sans-serif;
