--- a/paglacoste.html
+++ b/paglacoste.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Loja de Roupas</title>
+<title>Lacoste</title>
+<link rel="icon" href="./img/Logokisbert.jpeg" type="image/x-icon">
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -41,25 +42,25 @@
         width: 300px;
         padding: 10px;
         font-size: 16px;
-        border: 2px solid gold;
+        border: 2px solid #caa862;
         border-radius: 4px 0 0 4px;
         outline: none;
     }
     .search-bar button {
         padding: 10px;
         font-size: 16px;
-        border: 2px solid gold;
+        border: 2px solid #caa862;
         border-left: none;
         border-radius: 0 4px 4px 0;
-        background-color: gold;
+        background-color: #caa862;
         cursor: pointer;
     }
     .category {
         margin-bottom: 40px;
     }
     .category h2 {
-        color: #fff;
-        border-bottom: 2px solid #ddd;
+        color: #caa862;
+        border-bottom: 2px solid #040404;
         padding-bottom: 10px;
         text-align: center;
     }
@@ -101,17 +102,18 @@
         font-size: 14px;
     }
     .buy-button {
-        background-color: #28a745;
+        background-color: #caa862;
+        border-color: #000;
         color: white;
         border: none;
         padding: 10px 20px;
         font-size: 14px;
         cursor: pointer;
-        border-radius: 4px;
+        border-radius: 50px;
         margin-top: 10px;
     }
     .buy-button:hover {
-        background-color: #218838;
+        background-color: #caa862;
     }
 </style>
 </head>
